--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing=20>
       <tr>
-        <td><img src="C:\Users\hp\Desktop\full stack web developer\program\html-personal site\vrindapic.png" alt="vrinda profile picture"></td>
+        <td><img src="vrindapic.png" alt="vrinda profile picture"></td>
         <td><h1>Vrinda Shine</h1>
         <p><em>Full stack Web developer</em></p>
         <p>l'm a full stack web developer with a
